# ninetracklab

./: .gitignore  CMakeLists.txt  README.md  TODO  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  blockstore.cpp  blockstore.h  decodernrz1.cpp  decodernrz1.h  decoderpe.cpp  decoderpe.h  histogramdialog.cpp  histogramdialog.h  histogramdialog.ui  histview.cpp  histview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ninetracklab.cpp  ninetracklab.h  ninetracklab.pro  ninetracklab.ui  preprocessdialog.cpp  preprocessdialog.h  preprocessdialog.ui  qv9ttd.pro  resources.qrc  tapedrive.cpp  tapedrive.h  tapeview.cpp  tapeview.h  tdconf.cpp  tdconf.h  v9ttd
include/: nrz1.h  pe.h  utils.h  vtape.h
old/: csv2bin.py  filters.py  pstage.py  readers.py  v9td
old-c/: appversion
old-c/include/: pe.h  utils.h  vtape.h
old-c/src/: nrz1.c  utils.c
src/: CMakeLists.txt  nrz1.c  pe.c  utils.c  v9ttd.c  vtape.c
tools/: block_glue.py  peencoder.py  tapeenc.py
